cleaned extra line breaks and added new ones on occupy post, attempt 1 at creatively centering image

--- a/occupypdx.html
+++ b/occupypdx.html
@@ -12,8 +12,8 @@ description: collected raw data and survey analysis for political and demographi
 
 <p id="intro">On November 13th of 2011, I and <a href="#note1">several other members[^1]</a> of PSU's Survey Research Lab conducted an intercept survey with 134 participants within the Occupy Portland encampment.  This was less than 24 hours before the forced eviction and we managed to collect survey samples (40-question) from each participant.  Below is accumulated data and report.  The raw data can be found linked below on this site and the available summaries below, as well.</p>
 
-<img src="http://a.abcnews.go.com/images/US/gty_occupy_portland_dawn_cc_111113_wg.jpg" width="75%" alt="Occupy Portland courtesy Getty Images"/>
-<br />
+<div class="blockquote"><img src="http://a.abcnews.go.com/images/US/gty_occupy_portland_dawn_cc_111113_wg.jpg" width="75%" alt="Occupy Portland courtesy Getty Images"/></div>
+
 <p>Our initial survey was modeled after <a href="http://online.wsj.com/article/SB10001424052970204479504576637082965745362.html">a similar poll</a> conducted by Douglas E. Schoen of ~200 people at the Occupy Wallsteet encampment in Zuccotti Park, October 10th & 11th of 2011. <a href="/storage/OccupyPDXdata/SchoenOccupyWallStreetPoll.pdf" target="_blank">A summary of that report can be found here.</a>
 
 <p>Raw Data available in <a href="/storage/OccupyPDXdata/OccupyPortlandSurveyDataRaw.xls" target="_blank">[XLS]</a> and <a href="/storage/OccupyPDXdata/OccupyPortlandSurveyData.ods" target="_blank">[ODS]</a> formats.</p>
@@ -30,7 +30,6 @@ Maybe - 2 (1%)<br />
 TOTAL: 127 
 <br />
 <br />
-<br />
 
 2. How involved do you consider yourself in the Occupy Portland Movement?<br />
 Very involved - 48 (36%)<br />
@@ -40,14 +39,12 @@ Not at all - 7  (5%)<br />
 TOTAL: 132
 <br />
 <br />
-<br />
 
 3. Are you currently living in the Occupy Portland camp?<br />
 Yes (Full time) - 32 (24%)<br />
 Somewhat (Part time) - 18 (14%)<br />
 No - 82 (62%)<br />
 TOTAL: 132
-<br />
 <br />
 <br />
 
@@ -64,7 +61,6 @@ The camp is my primary residence - 11 (8%)<br />
 TOTAL: 130
 <br />
 <br />
-<br />
 
 5. Do you think that the Occupy Movement will continue to grow?<br />
 Yes - 100 (74%)<br />
@@ -73,14 +69,12 @@ Not sure - 25 (18%)<br />
 TOTAL: 134
 <br />
 <br />
-<br />
 
 6. Did you vote in the last election?<br />
 Yes - 88 (66%)<br />
 No - 42 (31%)<br />
 NA - 2 (1%)<br />
 TOTAL: 132
-<br />
 <br />
 <br />
 
@@ -92,7 +86,6 @@ NA - 1  (1%)<br />
 TOTAL: 132
 <br />
 <br />
-<br />
 
 8. Would you say you are turned off by our political system?<br />
 Yes - 115 (88%)<br />
@@ -102,14 +95,12 @@ Somewhat - 2 (1%)<br />
 TOTAL: 131
 <br />
 <br />
-<br />
 
 9. Have you ever participated in a political activity or is this your first time (such as attended a meeting, joined a political organization, written a letter or email to a legislator, attended a rally, volunteered, helped get out the vote, etc.)?<br />
-This is my first time getting involved in a political activity - 25 (19%)
+This is my first time getting involved in a political activity - 25 (19%)<br />
 I have participated in past political activity before the Occupy Movement - 104 (79%)<br />
 Neither - 2 (1%)<br />
 TOTAL: 131
-<br />
 <br />
 <br />
 
@@ -119,7 +110,6 @@ yes, no - 2 (2%)<br />
 No - 89 (67%)<br />
 RF - 1 (1%)<br />
 TOTAL: 132
-<br />
 <br />
 <br />
 
@@ -133,13 +123,11 @@ Get worse - 61 (47%)<br />
 TOTAL: 131
 <br />
 <br />
-<br />
 
 12. Have you had to downsize your lifestyle because of your economic situation?<br />
 Yes - 89 (68%)<br />
 No - 42 (32%)<br />
 TOTAL: 131
-<br />
 <br />
 <br />
 
@@ -151,7 +139,6 @@ NA - 1 (1%)<br />
 TOTAL: 132
 <br />
 <br />
-<br />
 
 14A. Would you use violence to achieve your goals?<br />
 (in self defense) - 1 (1%)<br />
@@ -160,12 +147,14 @@ Maybe - 18 (14%)<br />
 No - 101 (76%)<br />
 TOTAL: 133
 <br />
+<br />
 
 14B. Would you use property damage to achieve your goals?<br />
 Yes - 14 (11%)<br />
 Maybe - 21 (16%)<br />
 No - 98 (74%)<br />
 TOTAL: 133
+<br />
 <br />
 
 14C. Would you use the current political system to achieve your goals?<br /> 
@@ -177,7 +166,6 @@ No - 38 (29%)<br />
 TOTAL:132
 <br />
 <br />
-<br />
 
 15. Do you think that condition in the United States today are similar to those in many countries in the Middle East on the eve of the Arab Spring?<br />
 Yes - 25 (19%)<br />
@@ -187,16 +175,14 @@ No - 48 (37%)<br />
 TOTAL: 129
 <br />
 <br />
-<br />
 
 16. Do you feel that the wealthiest Americans are paying their fair share of taxes, or should we increase taxes on the wealthiest Americans?<br />
 Raise taxes on richest Americans - 103 (79%)<br />
 Not sure - 15 (11%)<br />
 Richest Americans are paying a fair share - 7 (5%)<br />
-(No) - 1 (1%)
+(No) - 1 (1%)<br />
 RF - 4 (3%)<br />
 TOTAL: 131
-<br />
 <br />
 <br />
 
@@ -204,23 +190,20 @@ TOTAL: 131
 Yes - 14 (11%)<br />
 Maybe - 33 (25%)<br />
 No - 83 (63%)<br />
-Yes, No - 1 (1%)<br />
-(End the fed!) - 1 (1%)<br />
+RF - 2 (2%)<br />
 TOTAL: 132
 <br />
 <br />
-<br />
+
 18. Some people say that globalization has made the American worker more vulnerable and has caused jobs to be outsourced and entire industries to disappear, and we need protective trade legislation to protect American jobs and industries. Do you agree or disagree?<br />
 Strongly agree - 76 (60%)<br />
 Somewhat agree - 34 (27%)<br />
 (Neutral) - 1 (1%)<br />
 Somewhat disagree - 9 (7%)<br />
 Strongly disagree - 3 (2%)<br />
-(Depends on industry) - 1 (1%)<br />
-(Globalization is RAPE) - 1 (1%)<br />
+RF - 2 (2%)<br />
 (Not sure) - 2 (2%)<br />
 TOTAL: 127
-<br />
 <br />
 <br />
 
@@ -228,10 +211,8 @@ TOTAL: 127
 Government money to banks was necessary - 15 (12%)<br />
 Government money to banks was NOT necessary - 107 (84%)<br />
 (Don't know) - 1 (1%)<br />
-(unsure) - 2 (1%)<br />
-RF - 2 (1%)<br />
+RF - 3 (2%)<br />
 TOTAL: 127
-<br />
 <br />
 <br />
 
@@ -239,40 +220,34 @@ TOTAL: 127
 More Bank regulation is needed - 98 (81%)<br />
 About the same bank regulation is needed - 7 (6%)<br />
 Less bank regulation is needed - 10 (8%)<br />
-(I think WE need to hold/loan capital) - 1 (1%)<br />
-(No banks no money)(no war) - 1 (1%)<br />
-(No regulation) - 1 (1%)<br />
-(Not sure) - 2 (1%)<br />
+DK - 2 (1%)<br />
+RF - 3 (2%) <br />
 TOTAL: 120
-<br />
 <br />
 <br />
 
 21. Do you agree or disagree with the following statement: “government has a moral responsibility to guarantee health care, college education, and a secure retirement for all – no matter the cost”?<br />
 Strongly agree - 82 (68%)<br />
 Somewhat agree - 22 (18%)<br />
-Somewhat agree, strongly disagree - 1 (1%)<br />
 Somewhat disagree - 6 (5%)<br />
 Strongly disagree - 10 (10%)<br />
+RF - 1 (1%)<br />
 Total: 121
+<br />
+<br />
 
-<br />
-<br />
-<br />
 22. Do you feel that the city of Portland has been supportive, unsupportive, or neutral towards the Occupy Portland Movement?<br />
 Supportive - 53 (44%)<br />
 Neutral - 34 (28%)<br />
 Unsupportive - 31 (26%)<br />
 Supportive, unsupportive, neutral - 1 (1%)<br />
-(depends) - 1 (1%)<br />
-(political) - 1 (1%)<br />
+RF - 2 (1%)<br />
 TOTAL: 121
 <br />
 <br />
-<br />
+
 23. What percentage of people at the Occupy Portland camp would you say are a part of the movement versus being here for other reasons?<br />
-% who are a part of the Occupy movement
-<br />
+% who are a part of the Occupy movement<br />
 1%	1<br />
 5%	1<br />
 10%	3<br />
@@ -297,7 +272,7 @@ TOTAL: 121
 90%	5<br />
 95%	2<br />
 99%	5<br />
-100%	5<br />
+100% 5<br />
 (?)	5<br />
 20 (80% tweakers) - 1<br />
 70-99 - 1<br />
@@ -306,7 +281,7 @@ RF - 1<br />
 TOTAL: 107
 <br />
 <br />
-<br />
+
 24. Compared to other cities, do you feel that in Portland you are allowed more free speech, less free speech, or is it about that same as other cities?<br />
 More - 61 (54%)<br />
 About the same - 45 (39%)<br />
@@ -315,7 +290,7 @@ Other - 3 (3%)<br />
 TOTAL: 114
 <br />
 <br />
-<br />
+
 25. Do you feel that local media coverage of Occupy Portland has been accurate?<br />
 Yes - 8 (7%)<br />
 Somewhat - 32 (28%)<br />
@@ -326,176 +301,192 @@ N/A - 1 (1%)<br />
 TOTAL: 116
 <br />
 <br />
-<br />
+
 26. Please rate how well the government is doing in serving the needs of the following groups:<br />
 <br />
+
 A. Families<br />
-Excellent - 3 (3%)
-Good - 10 (9%)
-Fair - 31 (27%)
-Fair, poor - 1 (1%)
-Poor - 71 (61%)
+Excellent - 3 (3%)<br />
+Good - 10 (9%)<br />
+Fair - 31 (27%)<br />
+Fair, poor - 1 (1%)<br />
+Poor - 71 (61%)<br />
 TOTAL: 116
 <br />
+
 B. Minorities<br />
-Excellent - 7 (6%)
-Good - 11 (9%)
-Fair - 19 (16%)
-Poor - 80 (68%)
+Excellent - 7 (6%)<br />
+Good - 11 (9%)<br />
+Fair - 19 (16%)<br />
+Poor - 80 (68%)<br />
 TOTAL: 117
 <br />
+
 C. The Middle Class<br />
-Excellent - 1 (1%)
-Good - 12 (10%)
-Fair - 42 (35%)
-Poor - 64 (54%)
+Excellent - 1 (1%)<br />
+Good - 12 (10%)<br />
+Fair - 42 (35%)<br />
+Poor - 64 (54%)<br />
 TOTAL: 119
 <br />
+
 D. The Poor<br />
-Excellent - 3 (3%)
-Good - 3 (3%)
-Fair - 8 (6%)
-Poor - 104 (88%)
+Excellent - 3 (3%)<br />
+Good - 3 (3%)<br />
+Fair - 8 (6%)<br />
+Poor - 104 (88%)<br />
 TOTAL: 118
 <br />
+
 E. The Rich<br />
-Excellent - 89 (75%)
-Good - 11 (9%)
-Fair - 3 (3%)
-Poor - 15 (13%)
+Excellent - 89 (75%)<br />
+Good - 11 (9%)<br />
+Fair - 3 (3%)<br />
+Poor - 15 (13%)<br />
 TOTAL: 118
 <br />
+
 F. Children<br />
-Excellent - 2 (2%)
-Good - 10 (8%)
-Fair - 38 (32%)
-Poor - 69 (58%)
+Excellent - 2 (2%)<br />
+Good - 10 (8%)<br />
+Fair - 38 (32%)<br />
+Poor - 69 (58%)<br />
 TOTAL: 119
 <br />
+
 G. Students<br />
-Excellent - 2 (2%)
-Good - 12 (10%)
-Fair - 32 (27%)
-Fair, poor - 2 (2%)
-Poor - 70 (59%)
+Excellent - 2 (2%)<br />
+Good - 12 (10%)<br />
+Fair - 32 (27%)<br />
+Fair, poor - 2 (2%)<br />
+Poor - 70 (59%)<br />
 TOTAL: 118
 <br />
+
 H. Homeless<br />
-Excellent - 2 (2%)
-Good - 0 (0%)
-Fair - 12 (10%)
-Poor - 104 (88%)
+Excellent - 2 (2%)<br />
+Good - 0 (0%)<br />
+Fair - 12 (10%)<br />
+Poor - 104 (88%)<br />
 TOTAL: 118
 <br />
+
 I. Those in Poverty<br />
-Excellent - 1 (1%)
-Good - 2 (2%)
-Fair - 12 (10%)
-Poor - 103 (87%)
+Excellent - 1 (1%)<br />
+Good - 2 (2%)<br />
+Fair - 12 (10%)<br />
+Poor - 103 (87%)<br />
 TOTAL: 118
 <br />
+
 J. Corporations<br />
-Excellent - 93 (79%)
-Good - 8 (7%)
-Fair - 4 (3%)
-Poor - 13 (11%)
+Excellent - 93 (79%)<br />
+Good - 8 (7%)<br />
+Fair - 4 (3%)<br />
+Poor - 13 (11%)<br />
 TOTAL: 118
 <br />
+
 K. Unions<br />
-Excellent - 11 (9%)
-Good - 18 (15%)
-Good/fair/poor - 1 (1%)
-Fair - 35 (30%)
-Fair, poor - 1 (1%)
-Poor - 52 (44%)
+Excellent - 11 (9%)<br />
+Good - 18 (15%)<br />
+Good/fair/poor - 1 (1%)<br />
+Fair - 35 (30%)<br />
+Fair, poor - 1 (1%)<br />
+Poor - 52 (44%)<br />
 TOTAL: 118
 <br />
+
 L. Financial Institutions<br />
-Excellent - 85 (73%)
-Good - 14 (12%)
-Fair - 5 (4%)
-Poor - 12 (10%)
+Excellent - 85 (73%)<br />
+Good - 14 (12%)<br />
+Fair - 5 (4%)<br />
+Poor - 12 (10%)<br />
 TOTAL: 116
 <br />
 <br />
-<br />
+
 27. Please rate how well the government is doing in providing the following services:<br />
 <br />
+
 A. Education<br />
-Excellent - 2 (2%)
-Good - 12 (10%)
-Fair - 30 (26%)
-Poor - 73 (62%)
+Excellent - 2 (2%)<br />
+Good - 12 (10%)<br />
+Fair - 30 (26%)<br />
+Poor - 73 (62%)<br />
 Total: 117
 <br />
+
 B. Environment<br />
-Excellent - 3 (3%)
-Good - 9 (8%)
-Fair - 41 (35%)
-Poor - 63 (54%)
+Excellent - 3 (3%)<br />
+Good - 9 (8%)<br />
+Fair - 41 (35%)<br />
+Poor - 63 (54%)<br />
 TOTAL: 116
 <br />
+
 C. Public Safety<br />
-Excellent - 2 (2%)
-Good - 34 (29%)
-Fair - 41 (35%)
-Poor - 40 (34%)
+Excellent - 2 (2%)<br />
+Good - 34 (29%)<br />
+Fair - 41 (35%)<br />
+Poor - 40 (34%)<br />
 TOTAL: 117
 <br />
+
 D. Healthcare<br />
-Excellent - 1 (1%)
-Good - 2 (2%)
-Fair - 29 (25%)
-Poor - 84 (72%)
+Excellent - 1 (1%)<br />
+Good - 2 (2%)<br />
+Fair - 29 (25%)<br />
+Poor - 84 (72%)<br />
 TOTAL: 116
 <br />
+
 E. Parks<br />
-Excellent - 6 (5%)
-Good - 34 (29%)
-Fair - 44 (38%)
-Poor - 32 (28)
+Excellent - 6 (5%)<br />
+Good - 34 (29%)<br />
+Fair - 44 (38%)<br />
+Poor - 32 (28)<br />
 TOTAL: 116
 <br />
+
 F. Infrastructure<br />
-Excellent - 3 (3%)
-Good - 22 (19%)
-Fair - 40 (34%)
-Poor - 51 (44%)
+Excellent - 3 (3%)<br />
+Good - 22 (19%)<br />
+Fair - 40 (34%)<br />
+Poor - 51 (44%)<br />
 TOTAL: 116
 <br />
+
 G. Jobs<br />
-Excellent - 0 (0%)
-Good - 5 (4%)
-Fair - 23 (20%)
-Poor - 89 (76%)
+Excellent - 0 (0%)<br />
+Good - 5 (4%)<br />
+Fair - 23 (20%)<br />
+Poor - 89 (76%)<br />
 TOTAL: 117
+<br />
+<br />
 
-<br />
-<br />
-<br />
 28. What frustrates you the most about the political process in the United States? [Please write answer in box]<br />
+<br />
 
+<p class="blockquote">Most responses talked about a frustration that the political system is dominated by corporations and the rich resulting in corruption and a lack of political voice for much of the population</p>
 <br />
-Most responses talked about a frustration that the political system is dominated by corporations and the rich resulting in corruption and a lack of political voice for much of the population
+<br />
 
-<br />
-<br />
-<br />
 29. What would you like to see the Occupy Wall Street movement achieve? [Please write answer in box]<br />
+<br />
 
-<br />
-Although responses varied widely there was a general thread of wanting to see Occupy become a permanent movement that would help to create a more fair and equal political and economic system.  
-<br />
+<p class="blockquote">Although responses varied widely there was a general thread of wanting to see Occupy become a permanent movement that would help to create a more fair and equal political and economic system.</p>
 <br />
 <br />
 
 30. Who would you say is most to blame for our failure to address our problems? [Please write answer in box]<br />
+<br />
 
-<br />
-Many responses focused on self incrimination and a general sense of culpability driven by apathy.  This was followed by a number of comments that focus on the current elite who hold power and the current structure of government with some related comments focused more on monied interests such as corporations, banks, and general greed.
-<br />
+<p class="blockquote">Many responses focused on self incrimination and a general sense of culpability driven by apathy.  This was followed by a number of comments that focus on the current elite who hold power and the current structure of government with some related comments focused more on monied interests such as corporations, banks, and general greed.</p>
 <br />
 <br />
+
 33. With which political party do you identify?<br />
 Constitution Party - 2<br />
 Democratic Party - 22<br />
@@ -505,17 +496,16 @@ Democratic Party, Other (they all liars) - 1<br />
 Democratic Party, Pacific Green Party - 2<br />
 Independent Party of Oregon - 7<br />
 Libertarian Party - 2<br />
-Other - 48<br />
 Pacific Green Party - 8<br />
 Progressive Party - 3<br />
 Republican Party - 6<br />
-RF - 1<br />
-The Lord God - 1<br />
 Working Families Party of Oregon - 7<br />
+Other - 48<br />
+RF - 2<br />
 TOTAL: 116
 <br />
 <br />
-<br />
+
 31. What is your gender?<br />
 Female - 34 (28%)<br />
 Male - 83 (69%)<br />
@@ -524,7 +514,7 @@ RF - 2 (1%)<br />
 TOTAL: 121
 <br />
 <br />
-<br />
+
 32. What is your age group?<br />
 15 to 19 - 7 (6%)<br />
 20 to 24 - 22 (18%)<br />
@@ -537,7 +527,7 @@ RF - 2 (2%)<br />
 TOTAL: 119
 <br />
 <br />
-<br />
+
 38. Are you employed?<br />
 disabled - 3<br />
 full-time - 30<br />
@@ -557,7 +547,7 @@ RF - 1<br />
 TOTAL: 118
 <br />
 <br />
-<br />
+
 39. Which of the following best describes your household’s total annual income for 2011?<br />
 Less than $10,000 - 39 (34%)<br />
 $10,000 - $14,999 - 15 (13%)<br />
@@ -571,7 +561,7 @@ RF - 1 (1%)<br />
 TOTAL: 114
 <br />
 <br />
-<br />
+
 34. What best describes your race or ethnicity?<br />
 American Indian - 3<br />
 Black or African American - 3<br />
@@ -598,26 +588,26 @@ RF - 1<br />
 TOTAL: 116
 <br />
 <br />
-<br />
+
 35. Do you currently live with a significant other or life partner?<br />
 Yes - 50 (42%)<br />
 No - 65 (54%)<br />
 Kind of - 1 (1%)<br />
-Partially - 1 (1%)<br />
+(Partially) - 1 (1%)<br />
 RF - 3 (2%)<br />
 TOTAL: 120
 <br />
 <br />
-<br />
+
 36. Are you the parent/guardian of any children?<br />
 Yes - 46 (39%)<br />
 No - 69 (58%)<br />
-Pregnant - 1 (1%)<br />
+(Pregnant) - 1 (1%)<br />
 RF - 2 (1%)<br />
 TOTAL: 119
 <br />
 <br />
-<br />
+
 37. Which of the following best describes your highest level of education? [CHECK ONLY ONE]<br />
 Graduate/Professional degree - 15 (13%)<br />
 Some graduate school - 12 (10%)<br />
@@ -627,7 +617,7 @@ High school graduate - 28 (24%)<br />
 Grade school or some high school - 10 (8%)<br />
 RF - 1<br />
 TOTAL: 119
+<br />
+<br />
 
-<br />
-<br />
 <p id="note1"><a href="#intro">NOTE:</a> Other participants included <a href="http://mulderc.blogspot.com" target="_blank">Cameron Mulder</a>, Stephen Shackman, Josie Griffin, Melissa Balgley, Philip Cleary, Erica Horton, and Fred Duong</p>
