moved image to storage folder for backup

--- a/occupypdx.html
+++ b/occupypdx.html
@@ -12,14 +12,14 @@ description: collected raw data and survey analysis for political and demographi
 
 <p id="intro">On November 13th of 2011, I and <a href="#note1">several other members[^1]</a> of PSU's Survey Research Lab conducted an intercept survey with 134 participants within the Occupy Portland encampment.  This was less than 24 hours before the forced eviction and we managed to collect survey samples (40-question) from each participant.  Below is accumulated data and report.  The raw data can be found linked below on this site and the available summaries below, as well.</p>
 
-<div class="blockquote"><img src="http://a.abcnews.go.com/images/US/gty_occupy_portland_dawn_cc_111113_wg.jpg" width="75%" alt="Occupy Portland courtesy Getty Images"/></div>
+<div class="blockquote"><img src="/storage/OccupyPDXdata/occupy_portland_dawn.jpg" width="75%" alt="Occupy Portland courtesy Getty Images"/></div>
 
 <p>Our initial survey was modeled after <a href="http://online.wsj.com/article/SB10001424052970204479504576637082965745362.html">a similar poll</a> conducted by Douglas E. Schoen of ~200 people at the Occupy Wallsteet encampment in Zuccotti Park, October 10th & 11th of 2011. <a href="/storage/OccupyPDXdata/SchoenOccupyWallStreetPoll.pdf" target="_blank">A summary of that report can be found here.</a>
 
 <p>Raw Data available in <a href="/storage/OccupyPDXdata/OccupyPortlandSurveyDataRaw.xls" target="_blank">[XLS]</a> and <a href="/storage/OccupyPDXdata/OccupyPortlandSurveyData.ods" target="_blank">[ODS]</a> formats.</p>
 
 
-<h2>Occupy Portland Report Summary DRAFT</h2>
+<h2>Occupy Portland Report Summary (DRAFT)</h2>
 <p><a href="/storage/OccupyPDXdata/OccupyPDXreportdraft.pdf">Download PDF of summary</a>
 <br />
 
