wrapped excess written comments in paranthesis, reversed scale order on education level

--- a/occupypdx.html
+++ b/occupypdx.html
@@ -296,8 +296,7 @@ TOTAL: 114
 	Somewhat - 32 (28%)<br />
 	No - 73 (64%)<br />
 	(Don't know) - 1 (1%)<br />
-	(largely cut off from media now 20 years) - 1 (1%)<br />
-	N/A - 1 (1%)<br />
+	RF - 2 (1%)<br />
 	TOTAL: 116
 </div>
 
@@ -307,7 +306,7 @@ TOTAL: 114
 	Excellent - 3 (3%)<br />
 	Good - 10 (9%)<br />
 	Fair - 31 (27%)<br />
-	Fair, poor - 1 (1%)<br />
+	(Fair, poor) - 1 (1%)<br />
 	Poor - 71 (61%)<br />
 	TOTAL: 116
 	<br />
@@ -356,7 +355,7 @@ TOTAL: 114
 	Excellent - 2 (2%)<br />
 	Good - 12 (10%)<br />
 	Fair - 32 (27%)<br />
-	Fair, poor - 2 (2%)<br />
+	(Fair, poor) - 2 (2%)<br />
 	Poor - 70 (59%)<br />
 	TOTAL: 118
 	<br />
@@ -388,9 +387,9 @@ TOTAL: 114
 	K. Unions<br />
 	Excellent - 11 (9%)<br />
 	Good - 18 (15%)<br />
-	Good/fair/poor - 1 (1%)<br />
+	(Good/fair/poor) - 1 (1%)<br />
 	Fair - 35 (30%)<br />
-	Fair, poor - 1 (1%)<br />
+	(Fair, poor) - 1 (1%)<br />
 	Poor - 52 (44%)<br />
 	TOTAL: 118
 	<br />
@@ -576,9 +575,8 @@ TOTAL: 114
 <div class="blockquote">
 	Yes - 50 (42%)<br />
 	No - 65 (54%)<br />
-	Kind of - 1 (1%)<br />
-	(Partially) - 1 (1%)<br />
-	RF - 3 (2%)<br />
+	(Kind of) - 1 (1%)<br />
+	RF - 4 (3%)<br />
 	TOTAL: 120
 </div>
 
@@ -593,12 +591,12 @@ TOTAL: 114
 
 37. Which of the following best describes your highest level of education? [CHECK ONLY ONE]
 <div class="blockquote">
-	Graduate/Professional degree - 15 (13%)<br />
-	Some graduate school - 12 (10%)<br />
-	College graduate (4 year degree) - 28 (24%)<br />
-	Technical/Vocational school/Some college (2yr degree) - 25 (21%)<br />
-	High school graduate - 28 (24%)<br />
 	Grade school or some high school - 10 (8%)<br />
+	High school graduate - 28 (24%)<br />
+	Technical/Vocational school/Some college (2yr degree) - 25 (21%)<br />
+	College graduate (4 year degree) - 28 (24%)<br />
+	Some graduate school - 12 (10%)<br />
+	Graduate/Professional degree - 15 (13%)<br />
 	RF - 1<br />
 	TOTAL: 119
 </div>
