added explanatory note to beginning of draft section

--- a/occupypdx.html
+++ b/occupypdx.html
@@ -21,6 +21,7 @@ description: collected raw data and survey analysis for political and demographi
 
 <h2>Occupy Portland Report Summary (DRAFT)</h2>
 <p><a href="/storage/OccupyPDXdata/OccupyPDXreportdraft.pdf">Download PDF of summary</a></p>
+<p class="blockquote">NOTE: Percentages rounded so may not always equal 100%. Refusals (RF) include not directly answering question in some cases, and other written comments incased in paranthesis. 
 
 1. Do you consider yourself a part of the Occupy Portland Movement?
 <div class="blockquote">
@@ -600,5 +601,6 @@ TOTAL: 114
 	RF - 1<br />
 	TOTAL: 119
 </div>
+<br />
 
 <p id="note1"><a href="#intro">NOTE:</a> Other participants included <a href="http://mulderc.blogspot.com" target="_blank">Cameron Mulder</a>, Stephen Shackman, Josie Griffin, Melissa Balgley, Philip Cleary, Erica Horton, and Fred Duong</p>
