--- a/occupypdx.html
+++ b/occupypdx.html
@@ -10,7 +10,7 @@ description: collected raw data and survey analysis for political and demographi
 ---
 
 
-<p id="intro">On November 13th of 2011, I and <a href="#note1">several other members[^1]</a> of PSU's Survey Research Lab conducted an intercept survey with 134 participants within the Occupy Portland encampment.  This was less than 24 hours before the forced eviction and we managed to collect survey samples (40-question) from each participant.  Below is accumulated data and report.  The raw data can be found linked below on this site and the available summaries below, as well.</p>
+<p id="intro">On November 13th of 2011, I and <a href="#note1">several other members[^1]</a> of PSU's Survey Research Lab conducted an intercept survey with 134 participants within the Occupy Portland encampment.  This was less than 24 hours before the forced eviction and we managed to collect survey samples (40-question) from each participant.  Below is accumulated data and report draft.  The raw data can be found linked below on this site and the available summaries below, as well.</p>
 
 <div class="blockquote"><img src="/storage/OccupyPDXdata/occupy_portland_dawn.jpg" width="75%" alt="Occupy Portland courtesy Getty Images"/></div>
 
