added coding mention to me-page on projects page

--- a/projects.html
+++ b/projects.html
@@ -3,7 +3,7 @@ layout: default
 title: projects
 ---
 
-<p><em>A list of my current (ongoing) projects:</em></p>
+<p><em>A list of my current (ongoing) projects. Most current code stuff over on Github, <a href="/me.html">see "me" page instead.</a></em></p>
 
 <ul>
 <li>Sleep data recording - a comparison between Zeo and Motion-tracker SleepAsAndroid</li>
