added linebreak before q1 on occupy

--- a/occupypdx.html
+++ b/occupypdx.html
@@ -21,8 +21,8 @@ description: collected raw data and survey analysis for political and demographi
 
 <h2>Occupy Portland Report Summary (DRAFT)</h2>
 <p><a href="/storage/OccupyPDXdata/OccupyPDXreportdraft.pdf">Download PDF of summary</a></p>
-<p class="blockquote">NOTE: Percentages rounded so may not always equal 100%. Refusals (RF) include not directly answering question in some cases, and other written comments incased in paranthesis. 
-
+<p class="blockquote">NOTE: Percentages rounded so may not always equal 100%. Refusals (RF) include not directly answering question in some cases, and other written comments incased in paranthesis.</p>
+<br />
 1. Do you consider yourself a part of the Occupy Portland Movement?
 <div class="blockquote">
 	Yes - 105 (83%)<br />
