--- a/me.html
+++ b/me.html
@@ -3,7 +3,7 @@ layout: default
 title: about me
 ---
 
-<p class="blockquote">"first off. it doesn't reflect my daily life. Most of what happens hour by hour is quiet and still. We sit most of the time"<br />~ Dhalgren, p.94</p>
+<p class="blockquote">"First off. it doesn't reflect my daily life. Most of what happens hour by hour is quiet and dull. We sit most of the time, watching the dull sky slipping. Frankly, that is too stupid to write about... What is down, then, is a chronicle of incidents with a potential for wholeness they did not have when they occurred"<br />~ Dhalgren, p.734</p>
 
 <p>I do stuff and things.</p>
 
